desktop/core/src/desktop/js/apps/editor/components/AiAssist/PreviewModal/AiPreviewModal.scss
/*
  Licensed to Cloudera, Inc. under one
  or more contributor license agreements.  See the NOTICE file
  distributed with this work for additional information
  regarding copyright ownership.  Cloudera, Inc. licenses this file
  to you under the Apache License, Version 2.0 (the
  "License"); you may not use this file except in compliance
  with the License.  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
*/

@use 'variables' as vars;
@use '../sharedAiAssistVars' as ai-assist-vars;
@use 'mixins';

$top: 100px; // Same value as specified in cuix

// We need to get the cuix class in but we can't add it to the root
.ant-modal-root {
  .hue-ai-preview-modal {
    .ant-modal-title {
      display: flex;
    }

    .hue-ai-preview-modal-inner {
      top: $top;
      max-height: calc(95vh - #{$top});
      overflow: hidden;
      display: flex;
      width: 80% !important;
      max-width: 1824px;

      .ant-modal-content {
        display: flex;
        flex-direction: column;
        width: 100%;
      }

      .ant-modal-body {
        display: flex;
        flex-direction: column;
        overflow: hidden;

        .hue-ai-preview-modal__diff-highlighter {
          max-height: 80%;
          min-width: 540px;
          display: flex;
          flex-direction: column;

          .hue-syntax-highlighter-diff-wrapper {
            overflow: auto;
            background-color: vars.$fluidx-slate-700;
          }
        }

        .hue-preview-info-panels {
          overflow: auto;
        }
      }
    }
  }
}

.hue-ai-preview-modal__icon {
  margin-right: vars.$fluidx-spacing-xs;
}

.hue-ai-preview-modal__syntax-highlighter {
  border-bottom-left-radius: ai-assist-vars.$border-radius;
  border-bottom-right-radius: ai-assist-vars.$border-radius;

  .react-syntax-highlighter-line-number {
    color: vars.$fluidx-gray-700;
  }
}

